// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
      color="#fff"
    >
      <div
        class="sc-jQHtVU cDMxHp"
      >
        10
        %
      </div>
      <div
        class="sc-jTYCaT dcZJub"
        style="width: 10%;"
      >
        <div
          class="sc-fvNpTx flrTXX"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-jQHtVU cDMxHp"
      >
        10
        %
      </div>
      <div
        class="sc-jTYCaT cxASLt"
        style="width: 10%;"
      >
        <div
          class="sc-fvNpTx flrTXX"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fctJkW byhvdN sc-HzFiz fzqlHq"
      color="#fff"
    >
      <div
        class="sc-jQHtVU cDMxHp"
      >
        10
        %
      </div>
      <div
        class="sc-jTYCaT dcZJub"
        style="width: 10%;"
      >
        <div
          class="sc-fvNpTx flrTXX"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
